--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,3 +40,11 @@ a {
     color-scheme: dark;
   }
 }
+
+form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 120px;
+}
